// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic functionality should cycle through stages 1`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`basic functionality should cycle through stages 2`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`basic functionality should cycle through stages 3`] = `
<div
  data-frame-index={2}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={2}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
  <div
    data-frame-index={2}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={2}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
</div>
`;

exports[`basic functionality should keep animating while measuring new frames 1`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`basic functionality should keep animating while measuring new frames 2`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`basic functionality should keep animating while measuring new frames 3`] = `
<div
  data-frame-index={4}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={4}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={4}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
  <div
    data-frame-index={4}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
</div>
`;

exports[`debugMeasure should work with debugMeasure not same first frame as last frame 1`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`debugMeasure should work with debugMeasure not same first frame as last frame 2`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`debugMeasure should work with debugMeasure not same first frame as last frame 3`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`debugMeasure should work with debugMeasure not same first frame as last frame 4`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`debugMeasure should work with debugMeasure not same first frame as last frame 5`] = `
<div
  data-frame-index={4}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={4}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={4}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
  <div
    data-frame-index={4}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
</div>
`;

exports[`debugMeasure should work with debugMeasure same first frame as last frame 1`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`debugMeasure should work with debugMeasure same first frame as last frame 2`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`debugMeasure should work with debugMeasure same first frame as last frame 3`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`debugMeasure should work with debugMeasure same first frame as last frame 4`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`debugMeasure should work with debugMeasure same first frame as last frame 5`] = `
<div
  data-frame-index={4}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={4}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={4}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={4}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`disableTransition should always be stale when disableTransition is true 1`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`disableTransition should always be stale when disableTransition is true 2`] = `
<div
  data-frame-index={2}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={2}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
  <div
    data-frame-index={2}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={2}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
</div>
`;

exports[`disableTransition should always be stale when transitionDuration is 0 1`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`disableTransition should always be stale when transitionDuration is 0 2`] = `
<div
  data-frame-index={2}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={2}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
  <div
    data-frame-index={2}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={2}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
</div>
`;

exports[`dynamicDirection should decrease height when adding new items 1`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`dynamicDirection should decrease height when adding new items 2`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`dynamicDirection should decrease height when adding new items 3`] = `
<div
  data-frame-index={2}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={2}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
  <div
    data-frame-index={2}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
</div>
`;

exports[`dynamicDirection should decrease width when adding new items 1`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`dynamicDirection should decrease width when adding new items 2`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`dynamicDirection should decrease width when adding new items 3`] = `
<div
  data-frame-index={2}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={2}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
  <div
    data-frame-index={2}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
</div>
`;

exports[`dynamicDirection should increase height when adding new items 1`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`dynamicDirection should increase height when adding new items 2`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`dynamicDirection should increase height when adding new items 3`] = `
<div
  data-frame-index={2}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={2}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
  <div
    data-frame-index={2}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={2}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={2}
    data-key={4}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    4
  </div>
</div>
`;

exports[`dynamicDirection should increase width when adding new items 1`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`dynamicDirection should increase width when adding new items 2`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`dynamicDirection should increase width when adding new items 3`] = `
<div
  data-frame-index={2}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={2}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
  <div
    data-frame-index={2}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={2}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={2}
    data-key={4}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    4
  </div>
</div>
`;

exports[`dynamicDirection should skip commit if dynamic direction is off 1`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`dynamicDirection should skip commit if dynamic direction is off 2`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`dynamicDirection should skip commit if dynamic direction is off 3`] = `
<div
  data-frame-index={2}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={2}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
  <div
    data-frame-index={2}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
</div>
`;

exports[`reMeasureAllPreviousFramesOnNewKeys should work 1`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`reMeasureAllPreviousFramesOnNewKeys should work 2`] = `
<div
  data-frame-index={1}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={1}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={1}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
  <div
    data-frame-index={1}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`reMeasureAllPreviousFramesOnNewKeys should work 3`] = `
<div
  data-frame-index={4}
  data-stage="STALE"
  id="wrapper"
  style={Object {}}
>
  <div
    data-frame-index={4}
    data-key={1}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    1
  </div>
  <div
    data-frame-index={4}
    data-key={3}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    3
  </div>
  <div
    data-frame-index={4}
    data-key={2}
    data-stage="STALE"
    id="cell"
    style={
      Object {
        "transform": "none",
        "transition": "0s 0s all ease",
      }
    }
  >
    2
  </div>
</div>
`;
